<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/register_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/light_gray" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout android:padding="5dp" >

            <EditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_name"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/register_address"
                android:inputType="textMultiLine"
                android:lines="3"
                android:singleLine="false" />

            <Button
                android:id="@+id/registerSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_submit"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registerLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:gravity="center"
                android:lines="2"
                android:text="@string/register_login_link"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>